--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="/favicon-32x32.png" />
+    <link rel="shortcut icon" href="/favicon-32x32.png" type="image/x-icon" />
 
   <!-- Fonts & Preconnect -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -122,7 +124,6 @@
         </div>
     </div>
 </div>
-
             <div class="challenges-of-being-a-creator">
     <div class="container w-container">
         <h2 class="heading-2 _900-font-weight center white-text">Why Local Businesses Struggle to Scale</h2>
@@ -134,7 +135,7 @@
       <div class="challenges-content">
             <div class="image-container">
               <img src="photo2.png" alt="Person" class="person-image" loading="lazy"/>
-              <img src="IamAaadarsh.png" alt="Name Label" class="name-image" loading="lazy" />
+              <img src="IamAaadarsh.png"  alt="Name Label" class="name-image" loading="lazy" />
             </div>
             <div class="w-layout-grid challenges-grid">
                 <div class="challenge-card">
@@ -370,8 +371,9 @@
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
                     <div>© 2025 Resolvia. All Rights Reserved.</div>
-
                     <div class="footer-links">
+                        <a href="contact.html" class="footer-link">Contact us</a>
+                        <a href="about.html" class="footer-link">About</a>
                         <a href="carrer.html" class="footer-link">Careers</a>
                         <a href="PrivacyPolicy.html" class="footer-link">Privacy Policy</a>
                         <a href="cookie-policy.html" class="footer-link">Cookie Policy</a>
@@ -394,7 +396,6 @@
 		accentColor: '#1d4ed8'
 	});
 </script>
-
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=627e6dcd037d539700a60cd6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.prod.website-files.com/627e6dcd037d539700a60cd6/js/webflow.d513ca016.js" type="text/javascript"></script>
     </body>
