--- a/index.html
+++ b/index.html
@@ -96,9 +96,17 @@
 </div>
 </div>
 <div class="youtube-container">
+    <!-- 
     <div style="padding-top:56.17021276595745%" class="w-embed-youtubevideo">
+        <img src="Video.jpg" loading="lazy" alt="Trailer" />
+        
         <iframe loading="lazy" src="https://www.youtube-nocookie.com/embed/w-8fugHGKpQ?rel=0&amp;controls=0&amp;autoplay=0&amp;mute=0&amp;start=0" frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen="" title="Part-Time Creatorpreneur Trailer"></iframe>
-    </div>
+        
+    </div>-->
+    <div style="position:relative; padding-top:56.25%;">
+  <img src="Video.png" alt="Trailer" loading="lazy" style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover;" />
+</div>
+
 </div>
 <div class="the-secret-to-100k _96-margin">
     <div class="container w-container">
@@ -383,6 +391,7 @@
         </div>
     </div>
 </div>
+<!-- 
     <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <link href="chatbot-style.css" rel="stylesheet" />
 <script type="module">
@@ -396,6 +405,7 @@
 		accentColor: '#1d4ed8'
 	});
 </script>
+-->
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=627e6dcd037d539700a60cd6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.prod.website-files.com/627e6dcd037d539700a60cd6/js/webflow.d513ca016.js" type="text/javascript"></script>
     </body>
