--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         
     </div>-->
     <div style="position:relative; padding-top:56.25%;">
-  <img src="Video.png" alt="Trailer" loading="lazy" style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover;" />
+  <img src="Video.jpeg" alt="Trailer" loading="lazy" style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover;" />
 </div>
 
 </div>
