--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             </div>
             <div class="newsletter-subscribe-form w-form">
 
-                <form action="https://formspree.io/f/mblgazpv" method="POST" class="flex-layout-form">
+                <form action="https://formspree.io/f/xnnvkdod" method="POST" class="flex-layout-form">
                     <!-- Name Input Field -->
                     <input class="input-field w-input" maxlength="256" name="full_name"
                         placeholder="Enter your name" type="text" required
