--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
   <div class="container">
     <h1>Contact Us</h1>
     <p>If you have questions, ideas, or you're ready to grow with automation — we'd love to hear from you.</p>
-    <form action="https://formspree.io/f/your-form-id" method="POST">
+    <form action="https://formspree.io/f/xdkzrzvq" method="POST">
       <label for="name">Name</label>
       <input type="text" name="name" id="name" required>
 
