--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
   width: 100%;
   left: 0;
 }
+/* Responsive for screens below 768px */
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 10px;
+    padding: 16px;
+  }
+  .nav-container {
+    order: 2;
+  }
+  .cta {
+    order: 3;
+  }
+  .logo {
+    order: 1;
+  }
+}
 
 
         </style>
@@ -430,21 +447,21 @@
         </div>
     </div>
 </div>
-<!-- 
+
     <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
 <link href="chatbot-style.css" rel="stylesheet" />
 <script type="module">
 	import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
 	createChat({
-		webhookUrl: 'https://n8n-t2th.onrender.com/webhook/6feff40f-3d71-4359-a1ba-6d62afaa1b58/chat',
+		webhookUrl: 'https://n8n.theresolvia.com/webhook/e4782699-b735-43fc-b739-9af8d2032267/chat',
 		name: 'Rohit',
 		subtitle: 'Start a chat. We’re here to help 24/7.',
 		theme: 'dark',
 		accentColor: '#1d4ed8'
 	});
 </script>
--->
+
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=627e6dcd037d539700a60cd6" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.prod.website-files.com/627e6dcd037d539700a60cd6/js/webflow.d513ca016.js" type="text/javascript"></script>
     </body>
